--- a/application/index/view/goods/product.html
+++ b/application/index/view/goods/product.html
@@ -280,30 +280,7 @@
                     
                   </tr>
                   {/foreach}
-<!--                  <tr valign="top">
-                    <td width="160"><img src="/front/images/peo2.jpg" width="20" height="20" align="absmiddle" />&nbsp;就是这么想的</td>
 
-                    <td>
-                    	送朋友，她很喜欢，大爱。 <br />
-                        <font color="#999999">2015-09-24</font>
-                    </td>
-                  </tr>
-                  <tr valign="top">
-                    <td width="160"><img src="/front/images/peo3.jpg" width="20" height="20" align="absmiddle" />&nbsp;墨镜墨镜</td>
-
-                    <td>
-                    	大家都说不错<br />
-                        <font color="#999999">2015-09-24</font>
-                    </td>
-                  </tr>
-                  <tr valign="top">
-                    <td width="160"><img src="/front/images/peo4.jpg" width="20" height="20" align="absmiddle" />&nbsp;那*****洋 <br /><font color="#999999">（匿名用户）</font></td>
-
-                    <td>
-                    	下次还会来买，推荐。<br />
-                        <font color="#999999">2015-09-24</font>
-                    </td>
-                  </tr>-->
                 </table>
 
                 	
@@ -367,7 +344,7 @@
                   </tr>
                   <tr height="50" valign="bottom">
                   	<td>&nbsp;</td>
-                    <td><a href="/index/goods_car/buycar" class="b_sure">去购物车结算</a><a href="http://www.yiyicheng.com/index/index/index" class="b_buy">继续购物</a></td>
+                    <td><a href="/index/goods_car/buycar" class="b_sure">去购物车结算</a><a href="http://www.xinyiyicheng.com/index/index/index" class="b_buy">继续购物</a></td>
                   </tr>
                 </table>
                     
