--- a/application/index/view/goods_car/buycar.html
+++ b/application/index/view/goods_car/buycar.html
@@ -14,6 +14,7 @@ function clearnick(id){
                 });
     
 }
+
     
 </script>
 <!--End Menu End--> 
@@ -24,6 +25,7 @@ function clearnick(id){
     
     <!--Begin 第一步：查看购物车 Begin -->
     <div class="content mar_20">
+        <input type="hidden" name='' value=""/> 
     	<table border="0" class="car_tab" style="width:1200px; margin-bottom:50px;" cellspacing="0" cellpadding="0">
           <tr>
             <td class="car_th" width="490">商品名称</td>
@@ -60,6 +62,7 @@ function clearnick(id){
                 
             </td>
           </tr>
+          
           <tr valign="top" height="150">
           	<td colspan="6" align="right">
             	<a href="/index/index/index"><img src="/front/images/buy1.gif" /></a>&nbsp; &nbsp; <a href="/index/account/confirm_settle"><img src="/front/images/buy2.gif" /></a>
